--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>corina.codes</title>
+    <meta http-equiv="refresh" content="0; url=https://github.com/Corina" />
+  </head>
+  <body>
+    <h3>Hello World</h3>
+  </body>
+</html>
